--- a/style/style.css
+++ b/style/style.css
@@ -23,7 +23,7 @@
 }
 
 .navbar-is-stuck+.content {
-    padding-top: 60px;
+    padding-top: 50px;
 }
 
 #navbar {
@@ -31,4 +31,8 @@
     background-color: white;
     border-radius: 0px;
     border-color: white
+}
+
+.myHeader {
+    box-shadow: 0px 3px 8px grey;
 }
