--- a/style/style.css
+++ b/style/style.css
@@ -63,7 +63,7 @@ ul.nav>li:hover {
 
 .myHeader {
     box-shadow: 0px 3px 8px grey;
-    z-index: 99999999;
+    z-index: 1000;
     
 }
 
@@ -583,3 +583,87 @@ body,
 ///////////////////////////////////////////////////////
 ///////////////style css //////////////////////////////
 /////////////////////////////////////////////////////*/
+
+
+
+
+/*////////////////////////////////////////////////////////
+///////////////////porfolio/////////////////////////////////
+////////////////////////////////////////////////////////*/
+
+
+.w3l_header{
+	font-size: 1.5em;
+    color: #212121;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    position: relative;
+}
+.w3l_header span{
+	color:#00ba66;
+}
+.w3l_header:after{
+	content: '';
+    background: #212121;
+    height: 2px;
+    width: 13%;
+    left: 14%;
+    position: absolute;
+    top: 49%;
+}
+.w3_agileits_header1:after{
+	left:20% !important;
+}
+
+.banner-bottom,.testimonials,.services,.service-bottom,.stats-bottom{
+	padding:5em 0;
+}
+.agileits_banner_bottom_grids,.w3layouts_work_grids,.wthree_testimonial_grids,.wthree_services_grids,.w3layouts_mail_grid{
+	margin:3em 0 0;
+}
+
+input[type="submit"],input[type="reset"],a,.agileinfo_services_grid1_pos,.agileinfo_services_grid1 h4,.simplefilter li{
+	-webkit-transition: 0.5s ease-in;
+    -moz-transition: 0.5s ease-in;
+    -ms-transition: 0.5s ease-in;
+    -o-transition: 0.5s ease-in;
+    transition:0.5s ease-in;
+}
+ul.simplefilter {
+    text-align: center;
+    margin-bottom: 2em;
+}
+
+.simplefilter li {
+	color: black;
+	border-bottom: 3px solid #00bbff;
+	cursor: pointer;
+	display: inline-block;
+	text-transform: uppercase;
+	border-radius: 25px; 
+	padding: 0.8em 2em;
+	margin: 0 0.3em;
+    background-color: #f9feff;
+}
+.simplefilter li.active,.simplefilter li:hover {
+    background-color: #00bbff;
+	border-bottom: 3px solid grey
+}
+.agileits_banner_bottom_grids,.w3layouts_work_grids,.wthree_testimonial_grids,.wthree_services_grids,.w3layouts_mail_grid{
+	margin:3em 0 0;
+}
+.filtr-item {
+    padding: 1em;
+}
+.wthree_services_grids{
+	margin:0 0 0;
+}
+.img-responsive{
+	border-bottom:3px solid #00bbff;
+	border-radius: 10px;
+}
+.w3-display-right{position:absolute;right:0%;transform:translate(0%,-50%);-ms-transform:translate(0%,-50%);font-size: 1.5em;}
+
+/*///////////////////////////////////////////
+/////////portfolio//////////////////////////
+/////////////////////////////////////////*/
