--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,11 @@
+
+body > .inner {
+  display: none;
+}
+
+body.pg-loaded > .inner {
+  display: block;
+}
 .navbar-toggle {
     border-color: #ddd
 }
